--- a/mm-s4apps01/sourcelistupload/webapp/view/Main.view.xml
+++ b/mm-s4apps01/sourcelistupload/webapp/view/Main.view.xml
@@ -23,7 +23,7 @@
                             <Text text="{local>/logInfo}"/>
                             <ToolbarSpacer/>
                             <Button id="idClearButton" icon="sap-icon://clear-all" type="Transparent" text="{i18n>clearBtn}" press="onClear" visible="{= ${local>/excelSet}.length > 0}"/>
-                            <Button id="idExcuteButton" icon="sap-icon://document" type="Transparent" text="{i18n>excuteBtn}" press="onExcute" visible="{= ${local>/excelSet}.length > 0}"/>
+                            <Button id="idExcuteButton" icon="sap-icon://save" type="Transparent" text="{i18n>excuteBtn}" press="onExcute" visible="{= ${local>/excelSet}.length > 0}"/>
                             <Button id="idExportButton" icon="sap-icon://excel-attachment" type="Transparent" text="{i18n>exportBtn}" press="onExport" visible="{= ${local>/excelSet}.length > 0}"/>
                         </OverflowToolbar>
                     </table:extension>
