PP-004_作業手順一括登録

--- a/pp-s4apps01/zroutingupload/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zroutingupload/webapp/view/Main.view.xml
@@ -94,9 +94,9 @@
                                 <Text text="{local>OperationControlProfile}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="10rem" label="{i18n>OperationStandardTextCode}">
+                        <table:Column width="10rem" label="{i18n>OperationText}">
                             <table:template>
-                                <Text text="{local>OperationStandardTextCode}" wrapping="false"/>
+                                <Text text="{local>OperationText}" wrapping="false"/>
                             </table:template>
                         </table:Column>
                         <table:Column width="12rem" label="{i18n>StandardWorkQuantity1}" hAlign="End">
