PP-001_BOMの一括登録

--- a/pp-s4apps01/zbomupload/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zbomupload/webapp/view/Main.view.xml
@@ -54,9 +54,9 @@
                                 <Text text="{local>BillOfMaterialVariantUsage}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="10rem" label="{i18n>IsMultipleBOMAlt}">
+                        <table:Column width="10rem" label="{i18n>BillOfMaterialVariant}">
                             <table:template>
-                                <Text text="{local>IsMultipleBOMAlt}" wrapping="false"/>
+                                <Text text="{local>BillOfMaterialVariant}" wrapping="false"/>
                             </table:template>
                         </table:Column>
                         <table:Column width="10rem" label="{i18n>HeaderValidityStartDate}">
